--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@neondatabase/serverless": "^0.9.4",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,7 +27,9 @@
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "ra-data-simple-rest": "^5.1.3",
     "react": "^18",
+    "react-admin": "^5.1.3",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
@@ -42,6 +47,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "shadcn-ui": "^0.2.3",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.17.0",
     "typescript": "^5"
